--- a/Chinesefood.html
+++ b/Chinesefood.html
@@ -1,6 +1,6 @@
 <html>
 <body>  
-      <link rel="stylesheet" type="text/css" href="Chinesefood.css">
+      <link rel="stylesheet" type="text/css" href="chinesefood.css">
     <header>
         <h1 id="headchange"> Chinese Food in Seattle</h1>
         
